feat: Añadir menú flotante para añadir anotaciones